--- a/HTML/Complete-pc/HP PAVILION 550-150ND.html
+++ b/HTML/Complete-pc/HP PAVILION 550-150ND.html
@@ -52,7 +52,7 @@
 				<div class="product-part">
 					<div class="productinfo">
 						<div class="imgproduct">
-							<img src="../../images/HP Slimline 450-a101nd-2.jpg"  alt="HP Slimline 450-a101nd">
+							<img src="../../images/HP Pavilion 550-150nd-2.jpg"  alt="HP Slimline 450-a101nd">
 						</div>
 						<div class="besproduct">
 							<h3>HP Slimline 450-a101nd</h3>
@@ -61,7 +61,7 @@
 								<span style="width: 54%"></span>
 							</div>
 							<h4>Beschrijving product</h4>
-							<p>De HP SLIMLINE HP Slimline 450-a101nd is weer een computer van de low-end klasse. Deze computer heeft een redelijk kleine kast met een mooie moderne design die overal in huis past.  </p>
+							<p>De  HP Pavilion 550-150nd bewijst zichzelf door zijn robuuste, simpele maar toch elegante design. Ook kan deze HP erg goed worden ingezet als een office-PC  </p>
 						</div>
 					</div>
 					<div class="productspecs">
