--- a/HTML/Complete-pc/complete-pc.html
+++ b/HTML/Complete-pc/complete-pc.html
@@ -65,7 +65,7 @@
 						</div>
 						<div class="product">
 							<a href="ASUS G20CB-NL009T.html">
-							<img src="../../images/Asus G20CB-NL009T.jpg" height="159" width="220" alt="ASUS G20CB-NL009T">
+							<img src="../../images/Asus G20CB-NL009T.jpg" alt="ASUS G20CB-NL009T">
 							<h3>ASUS G20CB-NL009T</h3>
 							</a>
 						</div>
@@ -73,7 +73,7 @@
 					<div class="p-row">
 						<div class="product">
 							<a href="HP PAVILION 550-150ND.html">
-							<img src="../../images/Asus G20CB-NL009T.jpg" height="159" width="220" alt="HP PAVILION 550-150ND">
+							<img src="../../images/HP Pavilion 550-150nd.jpg" alt="HP PAVILION 550-150ND">
 							<h3>HP PAVILION 550-150ND</h3>
 							</a>
 						</div>
