--- a/HTML/grafische-kaarten/ASUS-R9-Fury-Strix.html
+++ b/HTML/grafische-kaarten/ASUS-R9-Fury-Strix.html
@@ -52,7 +52,7 @@
 				<div class="product-part">
 					<div class="productinfo">
 						<div class="imgproduct">
-							<img src="../../images/ASUS R9 Fury Strix-2.jpg" height="210" width="290" alt="acer monitor">
+							<img src="../../images/ASUS R9 Fury Strix-2.jpg" alt="ASUS R9 Fury Strix">
 						</div>
 						<div class="besproduct">
 							<h3>ASUS R9 Fury Strix</h3>
