--- a/HTML/grafische-kaarten/MSI-GeForce-210.html
+++ b/HTML/grafische-kaarten/MSI-GeForce-210.html
@@ -52,7 +52,7 @@
 				<div class="product-part">
 					<div class="productinfo">
 						<div class="imgproduct">
-							<img src="../../images/MSI GeForce 210 1GB-2.jpg" height="210" width="290" alt="acer monitor">
+							<img src="../../images/MSI GeForce 210 1GB-2.jpg"  alt="MSI GeForce 210 1GB">
 						</div>
 						<div class="besproduct">
 							<h3>MSI GeForce GTX 970</h3>
