--- a/HTML/grafische-kaarten/MSI-GeForce-GTX-750-TI.html
+++ b/HTML/grafische-kaarten/MSI-GeForce-GTX-750-TI.html
@@ -52,7 +52,7 @@
 				<div class="product-part">
 					<div class="productinfo">
 						<div class="imgproduct">
-							<img src="../../images/GeForce GTX 750-2.png" alt="Placeholder Computer">
+							<img src="../../images/GeForce GTX 750-2.png" alt="GeForce GTX 750">
 						</div>
 						<div class="besproduct">
 							<h3>MSI GeForce GTX 750 TI</h3>
