--- a/HTML/grafische-kaarten/MSI-GeForce-GTX-970-GAMING-4G.html
+++ b/HTML/grafische-kaarten/MSI-GeForce-GTX-970-GAMING-4G.html
@@ -52,7 +52,7 @@
 				<div class="product-part">
 					<div class="productinfo">
 						<div class="imgproduct">
-							<img src="../../images/GeForce GTX 970-2.png" height="210" width="290" alt="acer monitor">
+							<img src="../../images/GeForce GTX 970-2.png" height="210" width="290" alt="GeForce GTX 970">
 						</div>
 						<div class="besproduct">
 							<h3>MSI GeForce GTX 970</h3>
