--- a/HTML/grafische-kaarten/MSI-GeForce-GTX-980-TI-GAMINGK-6G.html
+++ b/HTML/grafische-kaarten/MSI-GeForce-GTX-980-TI-GAMINGK-6G.html
@@ -52,7 +52,7 @@
 				<div class="product-part">
 					<div class="productinfo">
 						<div class="imgproduct">
-							<img src="../../images/GeForce GTX 750-2.png" alt="Placeholder Computer">
+							<img src="../../images/GeForce GTX 980-2.jpg" alt="Geforce GTX 980 TI">
 						</div>
 						<div class="besproduct">
 							<h3>MSI GeForce GTX 980 TI</h3>
@@ -65,7 +65,7 @@
 						</div>
 					</div>
 					<div class="productspecs">
-						<div class="specrow">
+						<div class="specrow"
 							<p>6 GB GDDR5 Geheugen</p>
 							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
