--- a/HTML/grafische-kaarten/MSI-Radeon-R9-390-8GB.html
+++ b/HTML/grafische-kaarten/MSI-Radeon-R9-390-8GB.html
@@ -52,7 +52,7 @@
 				<div class="product-part">
 					<div class="productinfo">
 						<div class="imgproduct">
-							<img src="../../images/MSI R9 390-2.png" alt="Placeholder Computer">
+							<img src="../../images/MSI R9 390-2.png" alt="MSI R9 390">
 						</div>
 						<div class="besproduct">
 							<h3>MSI R9 390</h3>
