--- a/HTML/moederborden/ASRock X99 WS-E-10G.html
+++ b/HTML/moederborden/ASRock X99 WS-E-10G.html
@@ -61,7 +61,7 @@
 								<span style="width: 44%"></span>
 							</div>
 							<h4>Beschrijving product</h4>
-							<p>De ASRock X99 WS-E/10G is een van de high-end moederborden. Deze moederbord heeft maar liefst 7 PCI-e sloten en ondersteund ook nog eens 8 RAM geheugehnslots.</p>
+							<p>De ASRock X99 WS-E/10G is een van de high-end moederborden. Deze moederbord heeft maar liefst 7 PCI-e sloten en ondersteund ook nog eens 8 RAM geheugenslots.</p>
 						</div>
 					</div>
 					<div class="productspecs">
