--- a/HTML/moederborden/Gigabyte GA-H170N.html
+++ b/HTML/moederborden/Gigabyte GA-H170N.html
@@ -52,7 +52,7 @@
 				<div class="product-part">
 					<div class="productinfo">
 						<div class="imgproduct">
-							<img src="../../images/ASRock X99 WS-E-10G-2.jpg"  alt="ASRock X99 WS-E/10G">
+							<img src="../../images/Gigabyte GA-H170N-WIFI-2.jpg"  alt="Gigabyte GA-H170N">
 						</div>
 						<div class="besproduct">
 							<h3>Gigabyte GA-H170N</h3>
