--- a/HTML/moederborden/Gigabyte GA-Z170X G5.html
+++ b/HTML/moederborden/Gigabyte GA-Z170X G5.html
@@ -52,7 +52,7 @@
 				<div class="product-part">
 					<div class="productinfo">
 						<div class="imgproduct">
-							<img src="../../images/Gigabyte Z170X-Gaming G5-2.png" alt="Gigabyte GA-Z170X">
+							<img src="../../images/Gigabyte Z170X-Gaming G5-2.jpg" alt="Gigabyte GA-Z170X">
 						</div>
 						<div class="besproduct">
 							<h3>Gigabyte GA-Z170X G5 </h3>
