--- a/HTML/moederborden/Raspberry Pi 2.html
+++ b/HTML/moederborden/Raspberry Pi 2.html
@@ -51,7 +51,7 @@
 				<div class="product-part">
 					<div class="productinfo">
 						<div class="imgproduct">
-							<img src="../../images/Gigabyte GA-H170N-WIFI-2.png" alt="Gigabyte GA-H170N-WIFI-2">
+							<img src="../../images/Raspberry Pi 2-2.jpg" alt="Raspberry Pi 2">
 						</div>
 						<div class="besproduct">
 							<h3>Raspberry Pi 2</h3>
