--- a/HTML/moederborden/moederborden.html
+++ b/HTML/moederborden/moederborden.html
@@ -58,9 +58,9 @@
 							</a>
 						</div>
 						<div class="product">
-							<a href="Gigabyte GA-H170N.html">
-							<img src="../../images/Gigabyte GA-H170N-WIFI.png" alt=" Gigabyte GA-H170N">
-							<h3>Gigabyte GA-H170N</h3>
+							<a href="ASRock X99 WS-E-10G.html">
+							<img src="../../images/ASRock X99 WS-E-10G.jpg" alt=" ASRock X99 WS-E-10G">
+							<h3>ASRock X99 WS-E-10G</h3>
 							</a>
 						</div>
 						<div class="product">
