asus img link gefixt

--- a/HTML/notebook/Asus EeeBook X205TA.html
+++ b/HTML/notebook/Asus EeeBook X205TA.html
@@ -52,7 +52,7 @@
 				<div class="product-part">
 					<div class="productinfo">
 						<div class="imgproduct">
-							<img src="../../images/Asus EeeBook X205TA-FD0061TS.jpg"  alt="Asus EeeBook X205TA-FD0061TS">
+							<img src="../../images/Asus EeeBook X205TA-FD0061TS-2.jpg"  alt="Asus EeeBook X205TA-FD0061TS">
 						</div>
 						<div class="besproduct">
 							<h3>Asus EeeBook X205TA-FD0061TS</h3>
