--- a/HTML/shop.html
+++ b/HTML/shop.html
@@ -12,7 +12,7 @@
 			<div class="top-section">
 				<div class="company">
 					<div class="logo">
-						<img src="../images/logo.png"/>
+						<img src="../images/logo.png" alt="logo website"/>
 					</div>
 					<div class="slogan">
 						<h1>Het beste, maar dan goedkoper!</h1>
