--- a/HTML/productpagina.html
+++ b/HTML/productpagina.html
@@ -24,7 +24,7 @@
 						<li><a href="../shop.html">Shop</a></li>
 						<li><a href="../computers.html">Computers</a></li>
 						<li><a href="../reparatie.html">Reparatie</a></li>
-						<li><a href="../Informatie.html">Informatie</a></li>
+						<li><a href="../informatie.html">Informatie</a></li>
 					</ul>
 				</div>
 			</div>
