bleutooth muis doet t nie meer

--- a/HTML/registratie.html
+++ b/HTML/registratie.html
@@ -7,6 +7,7 @@
 		<link href='https://fonts.googleapis.com/css?family=Karla' rel='stylesheet' type='text/css'>
 		<meta charset="UTF-8">
 		<link href="../stylesheet.css" rel="stylesheet" type="text/css">
+		<link rel="stylesheet" href="style-login.css" type="text/css">
 </head>
 <body>
 	<div class="container">
@@ -34,7 +35,7 @@
 				<div class="title">
 					<h2>Registratie</h2>
 				</div>
-			<div class="registration">
+			<div class="form-container">
 				 <form>
 			          <div class="form-login">
 			            <label for="first-name">Gebruikersnaam </label>
@@ -62,7 +63,9 @@
 			          </div>
 			        </form>					
 			        </div>
-			        </form>					
-			</div>
+			    </div>
+			</div>					
+		</div>
+	</div>
 </body>
 </html>
