login page + werkende linkjes

--- a/HTML/Informatie.html
+++ b/HTML/Informatie.html
@@ -26,6 +26,7 @@
 						<li><a href="computers.html">Computers</a></li>
 						<li><a href="reparatie.html">Reparatie</a></li>
 						<li class="active"><a href="Informatie.html">Informatie</a></li>
+						<li><a href="login.html">Inloggen</a></li>
 					</ul>
 				</div>
 			</div>
