--- a/HTML/registratie.html
+++ b/HTML/registratie.html
@@ -27,7 +27,7 @@
 						<li><a href="computers.html">Computers</a></li>
 						<li><a href="reparatie.html">Reparatie</a></li>
 						<li><a href="Informatie.html">Informatie</a></li>
-						<li><a href="#">Inloggen</a></li>
+						<li><a href="login.html">Inloggen</a></li>
 					</ul>
 				</div>
 			</div>
