--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<li><a href="HTML/computers.html">Computers</a></li>
 						<li><a href="HTML/reparatie.html">Reparatie</a></li>
 						<li><a href="HTML/informatie.html">Informatie</a></li>
-						<li><a href="#">Inloggen</a></li>
+						<li><a href="HTML/login.html">Inloggen</a></li>
 					</ul>
 				</div>
 			</div>
