--- a/HTML/login.html
+++ b/HTML/login.html
@@ -6,7 +6,6 @@
 		<link href='https://fonts.googleapis.com/css?family=Ubuntu:400italic' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Karla' rel='stylesheet' type='text/css'>
 		<link href="../stylesheet.css" rel="stylesheet" type="text/css">
-		<link rel="stylesheet" type="text/css" href="../style-login.css">
 	</head>
 	<body>
 		<div class="container">
@@ -21,7 +20,7 @@
 				</div>
 				<div class="nav">
 					<ul>
-						<li><a href="#">Home</a></li>
+						<li><a href="../index.html">Home</a></li>
 						<li><a href="shop.html">Shop</a></li>
 						<li><a href="computers.html">Computers</a></li>
 						<li><a href="reparatie.html">Reparatie</a></li>
@@ -44,13 +43,16 @@
 							<label for="password">Wachtwoord</label>
 							<input id="password" type="password" name="password">
 						</div>
-						<div class="form-login">
-							<label class="line" for="remember">Onthoud mijn wachtwoord</label>
+						<div class="form-login line">
+							<label for="remember">Onthoud mijn wachtwoord</label>
 							<input id="remember" name="remember" type="checkbox" value="checked">
 						</div>
 						<div class="form-login">
 							<input type="submit" value="Login">
 						</div>
+						<div class="form-login">
+							<a href="registratie.html">Registreren</a>
+						</div>		
 					</form>
 				</div>
 			</div>
