veerbeteringen op reparatie.html

--- a/HTML/registratie.html
+++ b/HTML/registratie.html
@@ -35,7 +35,7 @@
 				<div class="title">
 					<h2>Registratie</h2>
 				</div>
-			<div class="form-container">
+			<div class="register-form">
 				 <form>
 			          <div class="form-register">
 			            <label for="first-name">Gebruikersnaam:</label>
