--- a/HTML/registratie.html
+++ b/HTML/registratie.html
@@ -63,7 +63,7 @@
 			          </div>
 			          <div class="form-register">
 			            <label for="confirm-email">Bevestig e-mail:</label>
-			            <input type="text" id="confirm-e-mail">
+			            <input type="email" id="confirm-e-mail">
 			          </div>
 			          <div class="form-register">
 			            <label for="date">Geboortedatum:</label>
