registratiepagina details afgemaakt

--- a/HTML/registratie.html
+++ b/HTML/registratie.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-		<meta charset="utf-8">
-		<title>Registratie</title>
-		<link href='https://fonts.googleapis.com/css?family=Ubuntu:400italic' rel='stylesheet' type='text/css'>
-		<link href='https://fonts.googleapis.com/css?family=Karla' rel='stylesheet' type='text/css'>
-		<meta charset="UTF-8">
-		<link href="../stylesheet.css" rel="stylesheet" type="text/css">
-		<link rel="stylesheet" href="../style-register.css" type="text/css">
+	<meta charset="utf-8">
+	<title>Registratie</title>
+	<link href='https://fonts.googleapis.com/css?family=Ubuntu:400italic' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Karla' rel='stylesheet' type='text/css'>
+	<meta charset="UTF-8">
+	<link href="../stylesheet.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<div class="container">
@@ -38,39 +37,39 @@
 			<div class="register-form">
 				 <form>
 			          <div class="form-register">
-			            <label for="first-name">Gebruikersnaam:</label>
-			            <input type="text" id="user-name">
+			            <label for="user-name">Gebruikersnaam:</label>
+			            <input type="text" id="user-name" name="user-name">
 			          </div>
 			          <div class="form-register">
 			            <label for="password">Wachtwoord:</label>
-			            <input type="text" id="password">
+			            <input type="password" id="password" name="password">
 			          </div>
 			          <div class="form-register">
 			            <label for="confirm-password">Bevestig wachtwoord:</label>
-			            <input type="text" id="confirm-password">
+			            <input type="text" id="confirm-password" name="confirm-password">
 			          </div>
 			          <div class="form-register">
 			            <label for="last-name">Naam:</label>
-			            <input type="text" id="last-name">
+			            <input type="text" id="last-name" name="last-name">
 			          </div>
 			          <div class="form-register">
 			            <label for="first-name">Roepnaam:</label>
-			            <input type="text" id="first-name">
+			            <input type="text" id="first-name" name="first-name">
 			          </div>
 						<div class="form-register">
 			            <label for="email">E-mail:</label>
-			            <input type="email" id="email">
+			            <input type="email" id="email" name="email">
 			          </div>
 			          <div class="form-register">
 			            <label for="confirm-email">Bevestig e-mail:</label>
-			            <input type="email" id="confirm-e-mail">
+			            <input type="email" id="confirm-email" name="confirm-email">
 			          </div>
 			          <div class="form-register">
 			            <label for="date">Geboortedatum:</label>
-			            <input type="date" name="birth-date" placeholder="DD-MM-JJJJ">
+			            <input type="date" name="birth-date" placeholder="DD-MM-JJJJ" id="date" name="birth-date">
 			          </div>
 			          <div class="form-register">
-			            <input type="submit" value="send">
+			            <input type="submit" value="Registreren">
 			          </div>
 			        </form>					
 			        </div>
