required functie toegepast

--- a/HTML/registratie.html
+++ b/HTML/registratie.html
@@ -38,15 +38,15 @@
 				 <form>
 			          <div class="form-register">
 			            <label for="user-name">Gebruikersnaam:</label>
-			            <input type="text" id="user-name" name="user-name">
+			            <input type="text" id="user-name" name="user-name"required>
 			          </div>
 			          <div class="form-register">
 			            <label for="password">Wachtwoord:</label>
-			            <input type="password" id="password" name="password">
+			            <input type="password" id="password" name="password" required>
 			          </div>
 			          <div class="form-register">
 			            <label for="confirm-password">Bevestig wachtwoord:</label>
-			            <input type="text" id="confirm-password" name="confirm-password">
+			            <input type="text" id="confirm-password" name="confirm-password" required>
 			          </div>
 			          <div class="form-register">
 			            <label for="last-name">Naam:</label>
@@ -58,11 +58,11 @@
 			          </div>
 						<div class="form-register">
 			            <label for="email">E-mail:</label>
-			            <input type="email" id="email" name="email">
+			            <input type="email" id="email" name="email" required>
 			          </div>
 			          <div class="form-register">
 			            <label for="confirm-email">Bevestig e-mail:</label>
-			            <input type="email" id="confirm-email" name="confirm-email">
+			            <input type="email" id="confirm-email" name="confirm-email" required>
 			          </div>
 			          <div class="form-register">
 			            <label for="date">Geboortedatum:</label>
