--- a/HTML/registratie.html
+++ b/HTML/registratie.html
@@ -46,7 +46,7 @@
 			          </div>
 			          <div class="form-register">
 			            <label for="confirm-password">Bevestig wachtwoord:</label>
-			            <input type="text" id="confirm-password" name="confirm-password" required>
+			            <input type="password" id="confirm-password" name="confirm-password" required>
 			          </div>
 			          <div class="form-register">
 			            <label for="last-name">Naam:</label>
